Transposicao do artigo para o modelo .doc

--- a/Indicadores_ML.tex
+++ b/Indicadores_ML.tex
@@ -96,7 +96,7 @@ aplicações no mercado: \emph{Grid Search}, \emph{Randomized Search} e
 \end{abstract}
 
 \hypertarget{header-n1070}{%
-\subsection{Introdução}\label{header-n1070}}
+\section{Introdução}\label{header-n1070}}
 
 É importante ter-se em mente que \emph{nenhuma métrica é perfeita}. Toda
 forma e conceito de medição acaba privilegiando alguma parte da
@@ -168,10 +168,10 @@ No segundo,
 Finamente, análise de fraudes em cartão de crédito
 
 \hypertarget{header-n1101}{%
-\subsection{Métricas para Análise de Dados}\label{header-n1101}}
+\section{Métricas para Análise de Dados}\label{header-n1101}}
 
 \hypertarget{header-n1102}{%
-\subsubsection{Nomenclatura inicial:}\label{header-n1102}}
+\subsection{Nomenclatura inicial:}\label{header-n1102}}
 
 O processo de \emph{validação} de um algoritmo e dos hiperparâmetros
 utilizados em seu ajuste fino é uma técnica bastante utilizada para
@@ -210,7 +210,7 @@ estabelecer
 \end{itemize}
 
 \hypertarget{header-n1120}{%
-\subsubsection{Descrição das métricas}\label{header-n1120}}
+\subsection{Descrição das métricas}\label{header-n1120}}
 
 \begin{itemize}
 \item
@@ -318,7 +318,7 @@ estabelecer
 \[FOR = \frac{TN}{TN + FN}\]
 
 \hypertarget{header-n1166}{%
-\subsection{Referências}\label{header-n1166}}
+\section{Referências}\label{header-n1166}}
 
 {[}1{]}: Bernard Marr -\/- \emph{What Is The Difference Between
 Artificial Intelligence And Machine Learning?}, em Forbes:
